force-app/main/default/objects/HS_Code__c/HS_Code__c.object-meta.xml
<CustomObject>
    <customHelpPage>HSCodeOnlineHelp</customHelpPage>
    <label>HSコード</label>
    <nameField>
        <label>HS Code Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>