force-app/main/default/objects/HS_Code__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipName>HS_Code</relationshipName>
    <type>Lookup</type>
</CustomField>