force-app/main/default/objects/HS_Code__c/fields/Has_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Has_Subcategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether the HS Code has sub-catetory</description>
    <inlineHelpText>Indicate whether the HS Code has sub-category</inlineHelpText>
    <label>Has Subcategory</label>
    <type>Checkbox</type>
</CustomField>