force-app/main/default/objects/HS_Code__c/fields/HS_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Code__c</fullName>
    <label>HS Code</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>