force-app/main/default/objects/HS_Code__c/fields/Is_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Is_Chapter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chapter</label>
    <type>Checkbox</type>
</CustomField>