force-app/main/default/objects/HS_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HS_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Chapter__c</columns>
    <columns>Is_Chapter__c</columns>
    <columns>Has_Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>